--- a/css/style.css
+++ b/css/style.css
@@ -24,37 +24,39 @@ a:hover, a:visited, a{
 	position: fixed;
 	width: 100%;
 	z-index: 333;
-	margin: 0;
-	padding: 0;
+	/*margin: 0;
+	padding: 0;*/
 }
 .header-row{
 	width :full;
 	margin-left: -120px;
 	margin-right: -35px;
-	padding-top: 0px;*/
+	margin-top:-29px;
+	
 	
 }
 .top-header img.logo{
 	background-color: rgba(0, 0, 0, 0);
 	float: left;
-	margin-right: 0px;
+	padding-top:20px;
+	/*margin-right: 0px;
 	margin-bottom: 0px;
 	transition:all 0.7s ease 0s;
 	-webkit-transition:all 0.7s ease 0s;
 	-moz-transition:all 0.7s ease 0s;
 	-o-transition:all 0.7s ease 0s;
-	-ms-transition:all 0.7s ease 0s;
+	-ms-transition:all 0.7s ease 0s;*/
 }
 .navbar-default {
   background-color:black;
   border-color: transparent;
   /*margin-bottom: 0;
   margin-top: 0px;*/
-  transition:all 0.7s ease 0s;
+ /* transition:all 0.7s ease 0s;
 	-webkit-transition:all 0.7s ease 0s;
 	-moz-transition:all 0.7s ease 0s;
 	-o-transition:all 0.7s ease 0s;
-	-ms-transition:all 0.7s ease 0s;
+	-ms-transition:all 0.7s ease 0s;*/
 }
 .navbar-toggle span{
 	color: #fff;
@@ -68,11 +70,11 @@ ul.nav{
 	color: #FF3300;
 	text-transform: uppercase;
 	font-weight: 800;
-	transition: all .7s ease 0s;
+	/*transition: all .7s ease 0s;
 	-webkit-transition: all .7s ease 0s;
 	-moz-transition: all .7s ease 0s;
 	-o-transition: all .7s ease 0s;
-	-ms-transition: all .7s ease 0s;
+	-ms-transition: all .7s ease 0s;*/
 	padding: 10px 95px;
 	padding-bottom:5px;
 	border-radius: 20px;
@@ -83,7 +85,7 @@ ul.nav{
 }
 .navbar-default .navbar-toggle {
   border-color: #FFFF33;
-  margin-top: 0px;
+  /*margin-top: 0px;*/
 }
 /*banner area*/
 .banner{
